--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/enchiladas.html">Enchiladas</a>
+    <ul>
+      <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+    </ul>
   </body>
 </html>
