Link recipe website to yogurt medley recipe page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
+      <li><a href="recipes/yogurt-medley.html">Yogurt Medley</a></li>
       <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
-      <li><a></a></li>
-      <li><a></a></li>
+      <li><a href="recipes/orange-chicken-asparagus.html">Orange Chicken and Asparagus</a></li>
     </ul>
   </body>
 </html>
