Link recipe pages to recipe website

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <title>Enchiladas Recipe</title>
   </head>
-
   <body>
     <h1>Enchiladas</h1>
-    <img src="../img/chicken-enchiladas-supreme.jpg" alt="Enchiladas">
+    <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
     <h2>Chicken Enchiladas Supreme</h2>
-    <p>
-      Discover Chicken Enchiladas Supreme, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.
-    </p>
+    <p>Discover Chicken Enchiladas Supreme, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken. </p>
     <p>This recipe yields 6 servings.</p>
 
     <h3>Ingredients</h3>
@@ -35,6 +32,8 @@
       <li>Heat oil in large skillet on medium heat. Add peppers, onions and garlic; cook and stir 5 to 6 min., or until crisp-tender. Stir in chicken, &frac34; cup each cream cheese mixture and shredded cheese, and &frac14; cup enchilada sauce.</li>
       <li>Dip 1 tortilla in remaining enchilada sauce; gently shake off excess sauce. Spoon &frac14; cup chicken mixture down center of tortilla; roll up. Place, seam side down, in 13-by-9-in. baking dish sprayed with cooking spray. Repeat with remaining tortillas and filling; cover with remaining sauce.</li>
       <li>Bake 20 min. Top with remaining shredded cheese; bake 5 min. Mix remaining cream cheese mixture and remaining milk; spoon over enchiladas.</li>
-    </ol>  
+    </ol>
+
+    <a href="../index.html">Return to Odin Recipes</a>
   </body>
 </html>
