--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Yogurt Medley Recipe</title>
   </head>
-
   <body>
     <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, fruit, and yogurt in a bowl.">
@@ -18,10 +17,10 @@
       <li>&frac14; cup blueberries</li>
       <li>&frac14; cup raspberries</li>
       <li>&frac12; cup cantaloupe</li>
-      <li>&frac12; Tbsp goji berries</li>
-      <li>&frac12; Tbsp pumpkin seeds</li>
-      <li>&frac12; Tbsp slices almonds</li>
-      <li>&frac12; Tbsp coconut shavings</li>
+      <li>&frac12; Tbsp. goji berries</li>
+      <li>&frac12; Tbsp. pumpkin seeds</li>
+      <li>&frac12; Tbsp. slices almonds</li>
+      <li>&frac12; Tbsp. coconut shavings</li>
       <li>&frac14; cup granola</li>
     </ul>
 
@@ -32,5 +31,7 @@
       <li>Top with seeds, nuts, coconut, and granola.</li>
       <li>Serve immediately.</li>
     </ol>
+  
+    <a href="../index.html">Return to Odin Recipes</a>
   </body>
 </html>
