--- a/recipes/orange-chicken-asparagus.html
+++ b/recipes/orange-chicken-asparagus.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>Orange Chicken and Asparagus Recipe</title>
   </head>
-
   <body>
     <h1>Orange Chicken and Asparagus</h1>
-    <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice">
+    <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
     <p>For a healthier alternative to a favorite Chinese dish, try this Orange Chicken and Asparagus. Serve over rice or noodles, or enjoy on its own!</p>
     <p>This recipe yields 1 serving.</p>
@@ -31,5 +30,7 @@
       <li>Heat sesame oil in a large skillet. Saut&eacute; sliced chicken, garlic, and red pepper flakes for about 7 min. Add chopped asparagus and cook for an additional 3 min.</li>
       <li>In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 min. Serve plain or over rice of your choice.</li>
     </ol>
+
+    <a href="../index.html">Return to Odin Recipes</a>
   </body>
 </html>
