Update enchiladas and orange chicken and asparagus recipe pages

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
-    <h2>Chicken Enchiladas Supreme</h2>
-    <p>Discover Chicken Enchiladas Supreme, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken. </p>
+    <h2>Chicken Enchiladas</h2>
+    <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken. </p>
     <p>This recipe yields 6 servings.</p>
 
     <h3>Ingredients</h3>
