--- a/recipes/orange-chicken-asparagus.html
+++ b/recipes/orange-chicken-asparagus.html
@@ -8,7 +8,7 @@
     <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
-    <p>For a healthier alternative to a favorite Chinese dish, try this Orange Chicken and Asparagus. Serve over rice or noodles, or enjoy on its own!</p>
+    <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
     <p>This recipe yields 1 serving.</p>
 
     <h3>Ingredients</h3>
