Add styles to recipe website

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/home-style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <header>
+      <h1>Odin Recipes</h1>
+    </header>
+    <h2>Find a Recipe</h2>
     <ul>
       <li><a href="recipes/yogurt-medley.html">Yogurt Medley</a></li>
       <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
