--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
+    <link rel="stylesheet" href="../css/yogu-style.css">
     <title>Yogurt Medley Recipe</title>
   </head>
   <body>
