--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -7,7 +7,7 @@
     <title>Yogurt Medley Recipe</title>
   </head>
   <body>
-    <h1>Yogurt Medley</h1>
+    <!-- <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl.">
     <h2>Granola & Yogurt Bowl</h2>
     <p>Because every morning needs to start off with a bang! And these  granola & yogurt bowls do just that. So yummy, so delicious, and they each only take about 5 minutes to make!</p>
@@ -34,6 +34,6 @@
       <li>Serve immediately.</li>
     </ol>
   
-    <a href="../index.html">Return to Odin Recipes</a>
+    <a href="../index.html">Return to Odin Recipes</a> -->
   </body>
 </html>
