Add header to document

--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -7,6 +7,14 @@
     <title>Yogurt Medley Recipe</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Odin Recipes</a></li>
+          <li><a href="https://github.com/t4rantino/odin-recipes">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <!-- <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl.">
     <h2>Granola & Yogurt Bowl</h2>
