Add description to document

--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -15,6 +15,18 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="description">
+        <h1>Granola & Yogurt Bowl</h1>
+        <div></div>
+        <h2>Description</h2>
+        <p>
+          Because every morning needs to start off with a bang! And these granola & yogurt bowls do just that. So yummy, so delicious, and you can make them in a jiffy!
+        </p>
+      </div>
+      <div class="recipe-details"></div>
+      <div class="ingredients-and-steps"></div>
+    </main>
     <!-- <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl.">
     <h2>Granola & Yogurt Bowl</h2>
