Add extra details to document

--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -24,7 +24,32 @@
           Because every morning needs to start off with a bang! And these granola & yogurt bowls do just that. So yummy, so delicious, and you can make them in a jiffy!
         </p>
       </div>
-      <div class="recipe-details"></div>
+      <div class="recipe-details">
+        <div>
+          <ul>
+            <li>
+              <span>Level:</span>
+              <span>Easy</span>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <span>Total time:</span>
+              <span>5 minutes</span>
+            </li>
+            <li>
+              <span>Preparation time:</span>
+              <span>5 minutes</span>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <span>Yield:</span>
+              <span>1 serving</span>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="ingredients-and-steps"></div>
     </main>
     <!-- <h1>Yogurt Medley</h1>
