Add ingredients list to document

--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -50,7 +50,41 @@
           </ul>
         </div>
       </div>
-      <div class="ingredients-and-steps"></div>
+      <div class="ingredients-and-steps">
+        <div>
+          <h3>Ingredients</h3>
+          <ul>
+            <li>
+              <input type="checkbox">&frac12; cup plain greek yogurt</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac14; cup blueberries</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac14; cup raspberries</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac12; cup cantaloupe</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac12; Tbsp. goji berries</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac12; Tbsp. pumpkin seeds</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac12; Tbsp. slices almonds</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac12; Tbsp. coconut shavings</input>
+            </li>
+            <li>
+              <input type="checkbox">&frac14; cup granola</input>
+            </li>
+          </ul>
+        </div>
+        <div></div>
+      </div>
     </main>
     <!-- <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl.">
