Add steps to document

--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -83,7 +83,27 @@
             </li>
           </ul>
         </div>
-        <div></div>
+        <div>
+          <h3>Steps</h3>
+          <ol>
+            <li>
+              <span></span>
+              <div>Place the yogurt in a bowl.</div>
+            </li>
+            <li>
+              <span></span>
+              <div>Add the washed fruit.</div>
+            </li>
+            <li>
+              <span></span>
+              <div>Top with seeds, nuts, coconut, and granola.</div>
+            </li>
+            <li>
+              <span></span>
+              <div>Serve immediately.</div>
+            </li>
+          </ol>
+        </div>
       </div>
     </main>
     <!-- <h1>Yogurt Medley</h1>
