Add footer to document

--- a/recipes/yogurt-medley.html
+++ b/recipes/yogurt-medley.html
@@ -106,6 +106,9 @@
         </div>
       </div>
     </main>
+    <footer>
+      <p>Recipe from <a href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
+    </footer>
     <!-- <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl.">
     <h2>Granola & Yogurt Bowl</h2>
