Add and rename files

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/yogurt.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
-    <link rel="stylesheet" href="../css/yogu-style.css">
     <title>Yogurt Medley Recipe</title>
   </head>
   <body>
