--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/yogurt.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
-    <title>Yogurt Medley Recipe</title>
+    <title>Granola & Yogurt Bowl Recipe</title>
   </head>
   <body>
     <header>
