Add stylesheet to document

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/yogurt.css">
+    <link rel="stylesheet" href="../css/recipes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
     <title>Granola & Yogurt Bowl Recipe</title>
   </head>
