--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -12,8 +12,12 @@
     <header>
       <nav>
         <ul>
-          <li><a href="../index.html">Odin Recipes</a></li>
-          <li><a href="https://github.com/t4rantino/odin-recipes">Contact</a></li>
+          <li>
+            <a href="../index.html">Odin Recipes</a>
+          </li>
+          <li>
+            <a href="https://github.com/t4rantino/odin-recipes">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
