Add classes to header links

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -13,10 +13,10 @@
       <nav>
         <ul>
           <li>
-            <a href="../index.html">Odin Recipes</a>
+            <a class="logo" href="../index.html">Odin Recipes</a>
           </li>
           <li>
-            <a href="https://github.com/t4rantino/odin-recipes">Contact</a>
+            <a class="contact" href="https://github.com/t4rantino/odin-recipes">Contact</a>
           </li>
         </ul>
       </nav>
