Fix ingredients list

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -61,31 +61,40 @@
           <h3>Ingredients</h3>
           <ul>
             <li>
-              <input type="checkbox">&frac12; cup plain greek yogurt</input>
+              <input type="checkbox" id="yogurt">
+              <label for="yogurt">&frac12; cup plain greek yogurt</label>
             </li>
             <li>
-              <input type="checkbox">&frac14; cup blueberries</input>
+              <input type="checkbox" id="blueberries">
+              <label for="blueberries">&frac14; cup blueberries</label>
             </li>
             <li>
-              <input type="checkbox">&frac14; cup raspberries</input>
+              <input type="checkbox" id="raspberries">
+              <label for="raspberries">&frac14; cup raspberries</label>
             </li>
             <li>
-              <input type="checkbox">&frac12; cup cantaloupe</input>
+              <input type="checkbox" id="cantaloupe">
+              <label for="cantaloupe">&frac12; cup cantaloupe</label>
             </li>
             <li>
-              <input type="checkbox">&frac12; Tbsp. goji berries</input>
+              <input type="checkbox" id="goji">
+              <label for="goji">&frac12; Tbsp. goji berries</label>
             </li>
             <li>
-              <input type="checkbox">&frac12; Tbsp. pumpkin seeds</input>
+              <input type="checkbox" id="pumpkin">
+              <label for="pumpkin">&frac12; Tbsp. pumpkin seeds</label>
             </li>
             <li>
-              <input type="checkbox">&frac12; Tbsp. slices almonds</input>
+              <input type="checkbox" id="almonds">
+              <label for="almonds">&frac12; Tbsp. slices almonds</label>
             </li>
             <li>
-              <input type="checkbox">&frac12; Tbsp. coconut shavings</input>
+              <input type="checkbox" id="coconut">
+              <label for="coconut">&frac12; Tbsp. coconut shavings</label>
             </li>
             <li>
-              <input type="checkbox">&frac14; cup granola</input>
+              <input type="checkbox" id="granola">
+              <label for="granola">&frac14; cup granola</label>
             </li>
           </ul>
         </div>
