--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -4,22 +4,38 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/yogurt.css">
     <link rel="stylesheet" href="../css/recipes.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Granola & Yogurt Bowl Recipe</title>
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a class="logo" href="../index.html">Odin Recipes</a>
-          </li>
-          <li>
-            <a class="contact" href="https://github.com/t4rantino/odin-recipes">Contact</a>
-          </li>
-        </ul>
-      </nav>
+      <div>
+        <nav>
+          <button class="nav-button material-symbols-outlined" type="button" aria-owns="nav" aria-label="Open navigation">menu</button>
+          <ul class="accordion" id="nav">
+            <li>
+              <button class="more-recipes-button" type="button" aria-label="Open more recipes section" aria-expanded="false" aria-owns="recipes">
+                More Recipes
+                <span class="material-symbols-outlined" aria-hidden="true">add</span>
+              </button>
+              <ul class="more-recipes-list" id="recipes">
+                <li>
+                  <a href="../recipes/enchiladas.html">Enchiladas</a>
+                </li>
+                <li>
+                  <a href="../recipes/orange-chicken.html">Orange Chicken & Asparagus</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="github-link" href="https://github.com/t4rantino/odin-recipes">Created by t4rantino</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="logo" href="../index.html">Odin Recipes</a>
+      </div>
     </header>
     <main>
       <div class="description">
@@ -151,6 +167,7 @@
       <li>Serve immediately.</li>
     </ol>
   
-    <a href="../index.html">Return to Odin Recipes</a> -->
+    <a href="../index.html">Return to Odin Recipes</a>-->
+    <script src="../js/script.js"></script>
   </body>
 </html>
