Revise description text

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -43,7 +43,7 @@
         <div></div>
         <h2>Description</h2>
         <p>
-          Because every morning needs to start off with a bang! And these granola & yogurt bowls do just that. So yummy, so delicious, and you can make them in a jiffy!
+          Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!
         </p>
       </div>
       <div class="recipe-details">
