Remove content from document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,7 +7,8 @@
     <title>Enchiladas Recipe</title>
   </head>
   <body>
-    <h1>Enchiladas</h1>
+    
+    <!-- <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
     <h2>Chicken Enchiladas</h2>
     <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken. </p>
@@ -36,6 +37,6 @@
       <li>Bake 20 min. Top with remaining shredded cheese; bake 5 min. Mix remaining cream cheese mixture and remaining milk; spoon over enchiladas.</li>
     </ol>
 
-    <a href="../index.html">Return to Odin Recipes</a>
+    <a href="../index.html">Return to Odin Recipes</a> -->
   </body>
 </html>
