Add stylesheets and viewport tag to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/enchiladas.css">
+    <link rel="stylesheet" href="../css/recipes.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/ench-style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Enchiladas Recipe</title>
   </head>
   <body>
