Add header to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -10,6 +10,33 @@
     <title>Enchiladas Recipe</title>
   </head>
   <body>
+    <header>
+      <div>
+        <nav>
+          <button class="nav-button material-symbols-outlined" type="button" aria-owns="nav" aria-label="Open navigation">menu</button>
+          <ul class="accordion" id="nav">
+            <li>
+              <button class="more-recipes-button" type="button" aria-label="Open more recipes section" aria-expanded="false" aria-owns="recipes">
+                More Recipes
+                <span class="material-symbols-outlined" aria-hidden="true">add</span>
+              </button>
+              <ul class="more-recipes-list" id="recipes">
+                <li>
+                  <a href="../recipes/yogurt.html">Yogurt & Granola Bowl</a>
+                </li>
+                <li>
+                  <a href="../recipes/orange-chicken.html">Orange Chicken & Asparagus</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="github-link" href="https://github.com/t4rantino/odin-recipes">Created by t4rantino</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="logo" href="../index.html">Odin Recipes</a>
+      </div>
+    </header>
     
     <!-- <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
