Add script to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -68,5 +68,6 @@
     </ol>
 
     <a href="../index.html">Return to Odin Recipes</a> -->
+    <script src="../js/script.js"></script>
   </body>
 </html>
