Remove content from document

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -7,7 +7,7 @@
     <title>Orange Chicken and Asparagus Recipe</title>
   </head>
   <body>
-    <h1>Orange Chicken and Asparagus</h1>
+    <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
     <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
@@ -33,6 +33,6 @@
       <li>In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 min. Serve plain or over rice of your choice.</li>
     </ol>
 
-    <a href="../index.html">Return to Odin Recipes</a>
+    <a href="../index.html">Return to Odin Recipes</a> -->
   </body>
 </html>
