Add stylesheets and viewport tag to document

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/orange-chicken.css">
+    <link rel="stylesheet" href="../css/recipes.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/chic-style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
-    <title>Orange Chicken and Asparagus Recipe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orange Chicken & Asparagus Recipe</title>
   </head>
   <body>
     <!-- <h1>Orange Chicken and Asparagus</h1>
