--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -10,6 +10,34 @@
     <title>Orange Chicken & Asparagus Recipe</title>
   </head>
   <body>
+    <header>
+      <div>
+        <nav>
+          <button class="nav-button material-symbols-outlined" type="button" aria-owns="nav" aria-label="Open navigation">menu</button>
+          <ul class="accordion" id="nav">
+            <li>
+              <button class="more-recipes-button" type="button" aria-label="Open more recipes section" aria-expanded="false" aria-owns="recipes">
+                More Recipes
+                <span class="material-symbols-outlined" aria-hidden="true">add</span>
+              </button>
+              <ul class="more-recipes-list" id="recipes">
+                <li>
+                  <a href="../recipes/yogurt.html">Yogurt & Granola Bowl</a>
+                </li>
+                <li>
+                  <a href="../recipes/enchiladas.html">Enchiladas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="github-link" href="https://github.com/t4rantino/odin-recipes">Created by t4rantino</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="logo" href="../index.html">Odin Recipes</a>
+      </div>
+    </header>
+
     <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
