Add description to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -37,7 +37,37 @@
         <a class="logo" href="../index.html">Odin Recipes</a>
       </div>
     </header>
-    
+    <main>
+      <h1>Chicken Enchiladas</h1>
+      <section class="description">
+        <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="auto" width="100%">
+        <h2>Description</h2>
+        <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
+        <div class="recipe-details">
+          <ul>
+            <li>
+              <span>Level:</span>
+              <span>Medium</span>
+            </li></ul>
+          <ul>
+            <li>
+              <span>Total time:</span>
+              <span>40 minutes</span>
+            </li>
+            <li>
+              <span>Preparation time:</span>
+              <span>20 minutes</span>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <span>Yield:</span>
+              <span>6 servings</span>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <!-- <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
     <h2>Chicken Enchiladas</h2>
