--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -37,7 +37,38 @@
         <a class="logo" href="../index.html">Odin Recipes</a>
       </div>
     </header>
-
+    <main>
+      <h1>Orange Chicken & Asparagus</h1>
+      <section class="description">
+        <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="auto" width="100%">
+        <h2>Description</h2>
+        <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
+        <div class="recipe-details">
+          <ul>
+            <li>
+              <span>Level:</span>
+              <span>Easy</span>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <span>Total time:</span>
+              <span>15 minutes</span>
+            </li>
+            <li>
+              <span>Preparation time:</span>
+              <span>5 minutes</span>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <span>Yield:</span>
+              <span>1 serving</span>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
