Rearrange description section

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -38,16 +38,12 @@
       </div>
     </header>
     <main>
-      <div class="description">
-        <h1>Granola & Yogurt Bowl</h1>
-        <div></div>
+      <h1>Granola & Yogurt Bowl</h1>
+      <section class="description">
+        <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="auto" width="100%">
         <h2>Description</h2>
-        <p>
-          Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!
-        </p>
-      </div>
-      <div class="recipe-details">
-        <div>
+        <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
+        <div class="recipe-details">
           <ul>
             <li>
               <span>Level:</span>
@@ -71,7 +67,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </section>
       <div class="ingredients-and-steps">
         <div>
           <h3>Ingredients</h3>
