Change page title

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Enchiladas Recipe</title>
+    <title>Chicken Enchiladas Recipe</title>
   </head>
   <body>
     <header>
