Add ingredients to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -67,6 +67,57 @@
           </ul>
         </div>
       </section>
+      <div class="ingredients-and-steps">
+        <section>
+          <h3>Ingredients</h3>
+          <ul>
+            <li>
+              <input type="checkbox" id="cream">
+              <label for="cream">1 tub (8 oz.) PHILADELPHIA Cream Cheese Spread</label>
+            </li>
+            <li>
+              <input type="checkbox" id="milk">
+              <label for="milk">3 Tbsp. milk</label>
+            </li>
+            <li>
+              <input type="checkbox" id="garlic-powder">
+              <label for="garlic-powder">1 tsp. garlic powder</label>
+            </li>
+            <li>
+              <input type="checkbox" id="oil">
+              <label for="oil">2 tsp. oil</label>
+            </li>
+            <li>
+              <input type="checkbox" id="peppers">
+              <label for="peppers">1 cup green peppers, chopped</label>
+            </li>
+            <li>
+              <input type="checkbox" id="onions">
+              <label for="onions">1 cup onions, chopped</label>
+            </li>
+            <li>
+              <input type="checkbox" id="minced-garlic">
+              <label for="minced-garlic">2 cloves garlic, minced</label>
+            </li>
+            <li>
+              <input type="checkbox" id="chicken">
+              <label for="chicken">2 &frac12; cups cooked chicken, chopped</label>
+            </li>
+            <li>
+              <input type="checkbox" id="cheese">
+              <label for="cheese">1 &frac12; cups KRAFT Mexican-Style Four-Cheese Shredded Cheese</label>
+            </li>
+            <li>
+              <input type="checkbox" id="sauce">
+              <label for="sauce">2 cans (10 oz. each) red enchilada sauce</label>
+            </li>
+            <li>
+              <input type="checkbox" id="tortillas">
+              <label for="tortillas">12 corn tortillas (6 in.), warmed</label>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!-- <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
