--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -68,6 +68,53 @@
           </ul>
         </div>
       </section>
+      <div class="ingredients-and-steps">
+        <section>
+          <h3>Ingredients</h3>
+          <ul>
+            <li>
+              <input type="checkbox" id="oil">
+              <label for="oil">1 Tbsp. sesame oil</label>
+            </li>
+            <li>
+              <input type="checkbox" id="chicken">
+              <label for="chicken">4 oz. chicken, sliced into strips</label>
+            </li>
+            <li>
+              <input type="checkbox" id="garlic">
+              <label for="garlic">1 tsp. minced garlic</label>
+            </li>
+            <li>
+              <input type="checkbox" id="pepper">
+              <label for="pepper">&frac14; tsp. red pepper flakes</label>
+            </li>
+            <li>
+              <input type="checkbox" id="asparagus">
+              <label for="asparagus">2 cups asparagus, chopped</label>
+            </li>
+            <li>
+              <input type="checkbox" id="soy">
+              <label for="soy">1 tsp. soy sauce</label>
+            </li>
+            <li>
+              <input type="checkbox" id="honey">
+              <label for="honey">1 tsp. honey</label>
+            </li>
+            <li>
+              <input type="checkbox" id="seeds">
+              <label for="seeds">1 tsp. sesame seeds</label>
+            </li>
+            <li>
+              <input type="checkbox" id="orange">
+              <label for="orange">Juice and zest of 1 orange</label>
+            </li>
+            <li>
+              <input type="checkbox" id="rice">
+              <label for="rice">Rice (optional)</label>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
