Add steps to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -117,6 +117,31 @@
             </li>
           </ul>
         </section>
+        <section>
+          <h3>Steps</h3>
+          <ol>
+            <li>
+              <span></span>
+              <div>Heat oven to 350&deg;F.</div>
+            </li>
+            <li>
+              <span></span>
+              Mix cream cheese spread, 2 Tbsp. milk and garlic powder until blended.
+            </li>
+            <li>
+              <span></span>
+              Heat oil in large skillet on medium heat. Add peppers, onions and garlic; cook and stir 5 to 6 minutes, or until crisp-tender. Stir in chicken, &frac34; cup each cream cheese mixture and shredded cheese, and &frac14; cup enchilada sauce.
+            </li>
+            <li>
+              <span></span>
+              Dip 1 tortilla in remaining enchilada sauce; gently shake off excess sauce. Spoon &frac14; cup chicken mixture down center of tortilla; roll up. Place, seam side down, in 13-by-9-in. baking dish sprayed with cooking spray. Repeat with remaining tortillas and filling; cover with remaining sauce.
+            </li>
+            <li>
+              <span></span>
+              Bake 20 minutes. Top with remaining shredded cheese; bake 5 minutes. Mix remaining cream cheese mixture and remaining milk; spoon over enchiladas.
+            </li>      
+          </ol>
+        </section>
       </div>
     </main>
     <!-- <h1>Enchiladas</h1>
