--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -114,6 +114,19 @@
             </li>
           </ul>
         </section>
+        <section>
+          <h3>Steps</h3>
+          <ol>
+            <li>
+              <span></span>
+              Heat sesame oil in a large skillet. Saut&eacute; sliced chicken, garlic, and red pepper flakes for about 7 minutes. Add chopped asparagus and cook for an additional 3 minutes.
+            </li>
+            <li>
+              <span></span>
+              In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 min. Serve plain or over rice of your choice.
+            </li>
+          </ol>
+        </section>
       </div>
     </main>
     <!-- <h1>Orange Chicken and Asparagus</h1>
