Add footer to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -144,6 +144,9 @@
         </section>
       </div>
     </main>
+    <footer>
+      <p>Recipe from <a href="https://www.myfoodandfamily.com/recipe/122135/chicken-enchiladas-supreme">My Food and Family</a></p>
+    </footer>
     <!-- <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
     <h2>Chicken Enchiladas</h2>
