--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -129,6 +129,10 @@
         </section>
       </div>
     </main>
+    <footer>
+      <p>Recipe from <a href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
+    </footer>
+
     <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
