Remove class from section element

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -39,33 +39,35 @@
     </header>
     <main>
       <h1>Orange Chicken & Asparagus</h1>
-      <section class="description">
-        <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="auto" width="100%">
-        <h2>Description</h2>
-        <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
-        <div class="recipe-details">
-          <ul>
-            <li>
-              <span>Level:</span>
-              <span>Easy</span>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <span>Total time:</span>
-              <span>15 minutes</span>
-            </li>
-            <li>
-              <span>Preparation time:</span>
-              <span>5 minutes</span>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <span>Yield:</span>
-              <span>1 serving</span>
-            </li>
-          </ul>
+      <section>
+        <div class="description">
+          <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="auto" width="100%">
+          <h2>Description</h2>
+          <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
+          <div class="recipe-details">
+            <ul>
+              <li>
+                <span>Level:</span>
+                <span>Easy</span>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <span>Total time:</span>
+                <span>15 minutes</span>
+              </li>
+              <li>
+                <span>Preparation time:</span>
+                <span>5 minutes</span>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <span>Yield:</span>
+                <span>1 serving</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <div class="ingredients-and-steps">
@@ -132,7 +134,6 @@
     <footer>
       <p>Recipe from <a href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
     </footer>
-
     <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
     <h2>Orange Chicken and Asparagus</h2>
