--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -39,33 +39,35 @@
     </header>
     <main>
       <h1>Granola & Yogurt Bowl</h1>
-      <section class="description">
-        <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="auto" width="100%">
-        <h2>Description</h2>
-        <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
-        <div class="recipe-details">
-          <ul>
-            <li>
-              <span>Level:</span>
-              <span>Easy</span>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <span>Total time:</span>
-              <span>5 minutes</span>
-            </li>
-            <li>
-              <span>Preparation time:</span>
-              <span>5 minutes</span>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <span>Yield:</span>
-              <span>1 serving</span>
-            </li>
-          </ul>
+      <section>
+        <div class="description">
+          <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="auto" width="100%">
+          <h2>Description</h2>
+          <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
+          <div class="recipe-details">
+            <ul>
+              <li>
+                <span>Level:</span>
+                <span>Easy</span>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <span>Total time:</span>
+                <span>5 minutes</span>
+              </li>
+              <li>
+                <span>Preparation time:</span>
+                <span>5 minutes</span>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <span>Yield:</span>
+                <span>1 serving</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <div class="ingredients-and-steps">
