--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -41,7 +41,7 @@
       <h1>Orange Chicken & Asparagus</h1>
       <section>
         <div class="description">
-          <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="auto" width="100%">
+          <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." width="350">
           <h2>Description</h2>
           <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
           <div class="recipe-details">
