--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -71,7 +71,7 @@
         </div>
       </section>
       <div class="ingredients-and-steps">
-        <div>
+        <section>
           <h3>Ingredients</h3>
           <ul>
             <li>
@@ -111,8 +111,8 @@
               <label for="granola">&frac14; cup granola</label>
             </li>
           </ul>
-        </div>
-        <div>
+        </section>
+        <section>
           <h3>Steps</h3>
           <ol>
             <li>
@@ -132,7 +132,7 @@
               <div>Serve immediately.</div>
             </li>
           </ol>
-        </div>
+        </section>
       </div>
     </main>
     <footer>
